# CrabSQL

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  status.md
.github/workflows/: ci.yml  release.yml
examples/: probe_060.rs  reproduce_parser.rs
src/: auth.rs  backend.rs  error.rs  main.rs  model.rs  sql.rs  store.rs
status/: 2025-12-16_agent-workflow-readability.md  2025-12-16_alpha-mvp-release-workflow.md  2025-12-16_ci-clippy-left-join.md  2025-12-16_fix-cli-clippy.md  2025-12-16_github-initial-push.md  2025-12-16_join-using-natural.md  2025-12-16_joins-alias-wildcards.md  2025-12-16_joins-mvp.md  2025-12-16_milestone-4-joins.md  2025-12-16_where-null-semantics.md  2025-12-16_where-ops-right-join.md
tests/: verify.rs  verify_aggregates.rs  verify_datatypes.rs  verify_joins.rs  verify_where_ops.rs
tests/common/: mod.rs
