[package]
name = "rusty-mini-mysql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
 bincode = "1"
bitflags = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
opensrv-mysql = "0.7"
parking_lot = "0.12"
regex = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sha1 = "0.10"
sled = "0.34"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlparser = "0.60.0"

[dev-dependencies]
mysql = "24"
tempfile = "3"
chrono = "0.4"
